--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -4,7 +4,7 @@
 	opacity:0;
 	overflow:hidden;
 	-moz-user-select:none;
-	background:radial-gradient(ellipse closest-corner at 50% 50%, rgba(0,0,0,.3) 1%, rgba(0,0,0,.8) 100%);
+	background:radial-gradient(ellipse closest-corner at 50% 50%, rgba(0,0,0,.4) 1%, rgba(0,0,0,.8) 100%);
 	background:-webkit-radial-gradient(50% 50%, ellipse closest-corner, rgba(0,0,0,.3) 1%, rgba(0,0,0,.8) 100%);
 	width:100%;
 	height:100%;
@@ -20,13 +20,12 @@
 	pointer-events:none;
 }
 #pbOverlay.msie{ background-color:rgba(0,0,0,.6); }
-
 #pbOverlay.msie.pbLoading .imageWrap{ background:url('../images/loading.gif') no-repeat center; width:80px; }
 
 @keyframes pbLoaderFrames{ 50%{ height:5px; } }
 @-webkit-keyframes pbLoaderFrames{ 50%{ height:5px; } }
 
-#pbOverlay .pbLoader{ visibility:hidden; opacity:0; pointer-events:none; -webkit-transform:scale(.2); transform:scale(.2); position:absolute; z-index:999; top:50%; left:50%; margin:-50px 0 0 -50px; text-align:center; border-radius:100px; box-shadow:15px 32px 60px -20px #FFF inset, 1px 1px 3px 1px #FFF inset; width:100px; height:100px; transition:0.3s; -webkit-transition:0.2s; }
+#pbOverlay .pbLoader{ visibility:hidden; opacity:0; pointer-events:none; -webkit-transform:scale(.2); transform:scale(.2); position:absolute; z-index:999; top:50%; left:50%; margin:-50px 0 0 -50px; text-align:center; border-radius:100%; box-shadow:15px 32px 60px -20px #FFF inset, 1px 1px 3px 1px #FFF inset; width:100px; height:100px; transition:0.3s; -webkit-transition:0.2s; }
 #pbOverlay.pbLoading:not(.msie) .pbLoader{ visibility:visible; opacity:1; -webkit-transform:scale(1); transform:scale(1); }
 	#pbOverlay .pbLoader b{ display:inline-block; vertical-align:middle; margin:0 2px; width:8px; height:60px; border-radius:5px; background:rgba(255,255,255,0.8); box-shadow:0 0 10px rgba(0,0,0,0.5); -webkit-animation:.9s pbLoaderFrames infinite linear; animation:.9s pbLoaderFrames infinite linear; }
 	#pbOverlay .pbLoader b:nth-child(1){  }
@@ -69,8 +68,8 @@
 .hide #pbCloseBtn{ top:-50px; right:-50px; }
 .on #pbCloseBtn{ top:-2px; right:-2px; }
 
-#pbCloseBtn b{ display:inline-block; height:35px; width:35px; padding:8px 8px 12px 12px; font-size:2em; opacity:0.8; line-height:.9; vertical-align:middle; background:rgba(0,0,0,0.2); border-radius:0 0 0 70px; transition:0.1s ease-out; -webkit-transition:0.1s ease-out; }
-#pbCloseBtn:hover b{ padding:10px 10px 24px 24px; background-color:rgba(0,0,0,0.1); font-size:2.2em; }
+#pbCloseBtn b{ display:inline-block; height:35px; width:35px; padding:8px 8px 12px 12px; font-size:2em; opacity:0.8; line-height:.9; vertical-align:middle; background:rgba(255,255,255,0.2); border-radius:0 0 0 70px; transition:0.1s ease-out; -webkit-transition:0.1s ease-out; }
+#pbCloseBtn:hover b{ padding:10px 10px 24px 24px; font-size:2.2em; }
 
 #pbCaption, .hide #pbCaption{ position:absolute; z-index:999; bottom:-110px; width:100%; text-align:center; transition:0.4s; -webkit-transition:0.4s; }
 .show.on #pbCaption{ bottom:5px; transition-delay:.5s; -webkit-transition-delay:.5s; }
