--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,15 @@ body{ background:url('bg.jpg') fixed; }
 
 #wrap{ overflow:hidden; min-height:100%; padding:3%; box-shadow:0 0 0 10px rgba(255,255,255,0.1) inset; }
 #pbOverlay.show ~ #wrap{ -webkit-filter:blur(2px) grayscale(.4);}
-header{ float:left; font-size:1.1em; width:36%; color:#FFF; text-shadow:2px 3px 4px rgba(0,0,0,.5); font-family:'Cuprum'; }
-	header h1{ line-height:1; font-size:3em; }
-		header small{ color:inherit; }
-	header h2{ opacity:0.5; font-size:1.8em; line-height:1; }
-	header p{ margin:10% 0; }
-	header .btn{ box-shadow:0 0 4px rgba(0,0,0,0.4); }
-		header  footer{ margin-top:50px; text-shadow:none; font-size:0.9em; }
-		header a{ color:#D8FF16; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
-		header a:hover{ text-decoration:none; color:#FF1668; }
+.main{ float:left; font-size:1.1em; width:36%; color:#FFF; text-shadow:2px 3px 4px rgba(0,0,0,.5); font-family:'Cuprum'; }
+	.main h1{ line-height:1; font-size:3em; }
+		.main small{ color:inherit; }
+	.main h2{ opacity:0.5; font-size:1.8em; line-height:1; }
+	.main p{ margin:10% 0; }
+	.main .btn{ box-shadow:0 0 4px rgba(0,0,0,0.4); }
+		.main  footer{ margin-top:50px; text-shadow:none; font-size:0.9em; }
+		.main a{ color:#D8FF16; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
+		.main a:hover{ text-decoration:none; color:#FF1668; }
 #gallery{ float:right; width:60%; }
 	#gallery > a{ margin:1px; display:inline-block; xbackground:#F1F1F1; width:75px; height:75px; position:relative; vertical-align:bottom; 
 				  transition:.1s; -webkit-transition:0.1s; perspective:100px; -webkit-perspective:100px; }
