--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-html, body{ height:100%; }
-body{ background:url('bg.jpg') fixed; }
+html{ height:100%; }
+body{ min-height:100%; background:url('bg.jpg') fixed; box-shadow:0 0 0 10px rgba(255,255,255,0.1) inset; }
 
 @font-face {
   font-family: 'Cuprum';
@@ -8,7 +8,7 @@ body{ background:url('bg.jpg') fixed; }
   src: local('Cuprum'), local('Cuprum-Regular'), url(http://themes.googleusercontent.com/static/fonts/cuprum/v4/sp1_LTSOMWWV0K5VTuZzvQ.woff) format('woff');
 }
 
-#wrap{ overflow:hidden; min-height:100%; padding:3%; box-shadow:0 0 0 10px rgba(255,255,255,0.1) inset; }
+#wrap{ overflow:hidden; padding:3%; }
 #pbOverlay.show ~ #wrap{ -webkit-filter:blur(2px) grayscale(.4);}
 .main{ float:left; font-size:1.1em; width:36%; color:#FFF; text-shadow:2px 3px 4px rgba(0,0,0,.5); font-family:'Cuprum'; }
 	.main h1{ line-height:1; font-size:3em; }
@@ -18,7 +18,7 @@ body{ background:url('bg.jpg') fixed; }
 	.main .btn{ box-shadow:0 0 4px rgba(0,0,0,0.4); }
 		.main  footer{ margin-top:50px; text-shadow:none; font-size:0.9em; }
 		.main a{ color:#D8FF16; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
-		.main a:hover{ text-decoration:none; color:#FF1668; }
+		.main a:hover:not(.btn){ text-decoration:none; color:#FF1668; }
 #gallery{ float:right; width:60%; }
 	#gallery > a{ margin:1px; display:inline-block; xbackground:#F1F1F1; width:75px; height:75px; position:relative; vertical-align:bottom; 
 				  transition:.1s; -webkit-transition:0.1s; perspective:100px; -webkit-perspective:100px; }
