--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -26,6 +26,7 @@
 @-webkit-keyframes pbLoaderFrames{ 50%{ height:5px; } }
 
 #pbOverlay .pbLoader{ visibility:hidden; opacity:0; pointer-events:none; -webkit-transform:scale(.2); transform:scale(.2); position:absolute; z-index:999; top:50%; left:50%; margin:-50px 0 0 -50px; text-align:center; border-radius:100%; box-shadow:15px 32px 60px -20px #FFF inset, 1px 1px 3px 1px #FFF inset; width:100px; height:100px; transition:0.3s; -webkit-transition:0.2s; }
+#pbOverlay.thumbs .pbLoader{ margin-top:-100px; }
 #pbOverlay.pbLoading:not(.msie) .pbLoader{ visibility:visible; opacity:1; -webkit-transform:scale(1); transform:scale(1); }
 	#pbOverlay .pbLoader b{ display:inline-block; vertical-align:middle; margin:0 2px; width:8px; height:60px; border-radius:5px; background:rgba(255,255,255,0.8); box-shadow:0 0 10px rgba(0,0,0,0.5); -webkit-animation:.9s pbLoaderFrames infinite linear; animation:.9s pbLoaderFrames infinite linear; }
 	#pbOverlay .pbLoader b:nth-child(1){  }
@@ -37,8 +38,11 @@
 #pbOverlay .pbLoader::before{ content:""; display:inline-block; height:100%; margin-right:-0.25em; vertical-align:middle; }
 
 /* fixes image flickering when resizing with transform */
-.imageWrap{ display:inline-block; box-sizing:border-box; -moz-box-sizing:border-box; vertical-align:middle; height:100%; perspective:700px; -webkit-perspective:700px; }
-.thumbs .imageWrap{ padding-bottom:100px; }
+#pbOverlay .imageWrap{ display:inline-block; box-sizing:border-box; -moz-box-sizing:border-box; vertical-align:middle; height:100%; perspective:700px; -webkit-perspective:700px; }
+#pbOverlay .imageWrap::before{ content:'Could not be loaded'; position:absolute; top:-999px; opacity:0; background:rgba(0,0,0,.6); border-radius:50px; color:#FFF; display:inline-block; font-size:1.4em; font-weight:bold; line-height:1.2; padding:20px; text-transform:uppercase; vertical-align:middle; white-space:pre; transition:.6s; -webkit-transition:.6s; }
+#pbOverlay.error .imageWrap::before{ position:static; opacity:1; transform:scale(1.2); -webkit-transform:scale(1.2); }
+#pbOverlay.thumbs .imageWrap{ padding-bottom:100px; }
+#pbOverlay.error .imageWrap img{ width:0; }
 
 #pbOverlay.show .imageWrap img{ 
 	transition:1s .5s cubic-bezier(0.095, 0.870, 0.485, 0.985);
@@ -87,14 +91,14 @@
 				#pbCaption .pbThumbs li.active a img{ opacity:1; height:75px; }
 				#pbCaption .pbThumbs li.active a img{ border-color:#D8FF16; }
 
-.prevNext{ position:absolute; z-index:2; height:100%; width:35%; padding:80px 0; opacity:0; box-sizing:border-box; -moz-box-sizing:border-box; top:0; transition:.2s ease-out; -webkit-transition:.2s ease-out; cursor:pointer; }
-.on .prevNext:hover{ opacity:.5; }
-.on .prevNext:active{ opacity:1; }
+#pbOverlay .prevNext{ position:absolute; z-index:2; height:100%; width:35%; padding:80px 0; opacity:0; box-sizing:border-box; -moz-box-sizing:border-box; top:0; transition:.2s ease-out; -webkit-transition:.2s ease-out; cursor:pointer; }
+#pbOverlay.on .prevNext:hover{ opacity:.5; }
+#pbOverlay.on .prevNext:active{ opacity:1; }
 	.prevNext b{ width:68px; height:103px; position:absolute; top:50%; margin-top:-52px; background:url('../images/arrow.png') center center no-repeat; transform:scale(.6); -webkit-transform:scale(.6); transition:.2s cubic-bezier(0.095, 0.870, 0.485, 0.985); -webkit-transition:.2s cubic-bezier(0.095, 0.870, 0.485, 0.985); }
 	#pbPrevBtn b{ left:30%; transform:scale(.6) rotate(180deg); -webkit-transform:scale(.6) rotate(180deg); -ms-transform:rotate(180deg); }
 	#pbNextBtn b{ right:30%; }
-	.on #pbPrevBtn:hover b{ transform:scale(1) rotate(180deg); -webkit-transform:scale(1) rotate(180deg); -ms-transform:rotate(180deg); left:5%; }
-	.on #pbNextBtn:hover b{ transform:scale(1); -webkit-transform:scale(1); right:5%; }
+	#pbOverlay.on #pbPrevBtn:hover b{ transform:scale(1) rotate(180deg); -webkit-transform:scale(1) rotate(180deg); -ms-transform:rotate(180deg); left:5%; }
+	#pbOverlay.on #pbNextBtn:hover b{ transform:scale(1); -webkit-transform:scale(1); right:5%; }
 	
 #pbOverlay.show #pbPrevBtn, #pbOverlay.show #pbNextBtn{  }
 #pbOverlay.show #pbPrevBtn{ left:0; }
