--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
-html{ height:100%; }
-body{ min-height:100%; background:url('bg.jpg') repeat-x fixed; box-shadow:0 0 0 10px rgba(255,255,255,0.1) inset; }
+html{ min-height:100%; overflow-y:scroll; box-shadow:0 0 0 10px rgba(255,255,255,0.1) inset; }
+body{ height:100%; background:url('bg2.jpg') 50% 50% fixed no-repeat; background-size:cover; -webkit-background-size:100% 100%; -webkit-animation:8s bg forwards ease; }
+
+@-webkit-keyframes bg{ 
+	0%{ background-size:120% 120%; }
+	100%{ background-size:100% 100%; } 
+}
+
+@font-face {
+  font-family: 'Romanesco';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Romanesco'), local('Romanesco-Regular'), url(http://themes.googleusercontent.com/static/fonts/romanesco/v1/ulV2bu0ivcWDuAzM7oh4XT8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+}
 
 @font-face {
   font-family: 'Cuprum';
@@ -10,22 +22,25 @@ body{ min-height:100%; background:url('bg.jpg') repeat-x fixed; box-shadow:0 0 0
 
 #wrap{ overflow:hidden; padding:3%; }
 #pbOverlay.show ~ #wrap{ -webkit-filter:blur(2px) grayscale(.4);}
-.main{ float:left; font-size:1.1em; width:36%; color:#FFF; text-shadow:2px 3px 4px rgba(0,0,0,.5); font-family:'Cuprum'; }
-	.main h1{ line-height:1; font-size:3em; }
+.main{ float:left; font-size:1.1em; width:36%; color:#FFF; text-shadow:2px 2px 4px rgba(0,0,0,.5); font-family:'Cuprum'; }
+	.main h1{ line-height:1; font-size:6.2em; margin:0; text-indent:1%; font-family:'Romanesco'; }
 		.main small{ color:inherit; }
-	.main h2{ opacity:0.5; font-size:1.8em; line-height:1; }
-	.main p{ margin:10% 0; }
+	.main h2{ font-size:1.7em; color:#FF1668; line-height:0.5; margin:0; font-family:'Romanesco'; }
+	.main p{ margin:7% 0; }
 	.main .btn{ box-shadow:0 0 4px rgba(0,0,0,0.4); }
 		.main footer{ margin-top:50px; text-shadow:none; font-size:0.9em; }
 		.main footer a{ color:#D8FF16; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
 		.main footer a:hover{ text-decoration:none; color:#FF1668; }
 #gallery{ float:right; width:60%; }
-	#gallery > a{ margin:1px; display:inline-block; xbackground:#F1F1F1; width:75px; height:75px; position:relative; vertical-align:bottom; 
-				  transition:.1s; -webkit-transition:0.1s; perspective:100px; -webkit-perspective:100px; }
-	#gallery > a img{ -webkit-transform:rotateX(90deg); transform:rotateX(90deg); transition:.4s ease-out; -webkit-transition:0.4s ease-out; }
-	#gallery > a.loaded img{ -webkit-transform:rotateX(0deg); transform:rotateX(0deg); }
-		#gallery > a.loaded:hover{ transform:scale(1.5); -webkit-transform:scale(1.5); box-shadow:0 0 0 3px #FFF, 0 0 20px 5px #000; z-index:2; }
-		
+	#gallery li{ list-style:none; perspective:100px; -webkit-perspective:100px; margin:1px; float:left; position:relative; transition:.1s; -webkit-transition:0.1s; }
+	#gallery a{ display:block; width:75px; height:68px; vertical-align:bottom; overflow:hidden; background:rgba(0,0,0,0.1);
+				transition:.4s ease-out; -webkit-transition:0.4s ease-out; -webkit-transform:rotateX(90deg) translateY(-50%); transform:rotateX(90deg) translateY(-50%); }
+	#gallery a img{ min-height:100%; min-width:100%; transition:.3s ease-out; -webkit-transition:0.3s ease-out; }
+	#gallery .loaded a{ -webkit-transform:rotateX(0deg) translateY(0); transform:rotateX(0deg) translateY(0); }
+		#gallery li.loaded:hover{ transform:scale(1.5); -webkit-transform:scale(1.5); z-index:2; }
+		#gallery li.loaded a:hover{ box-shadow:0 0 0 2px #FFF, 0 0 20px 5px #000; transition:.1s; -webkit-transition:0.1s; }
+		#gallery li.loaded:hover img{ transform:scale(1.2); -webkit-transform:scale(1.2); }
+	
 /*------- media queries -----------*/
 @media all and (max-width:700px){
 	#gallery > a{ width:45px; height:45px; }
