--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -1,3 +1,51 @@
+@charset "UTF-8";
+
+@font-face {
+  font-family: 'font-awesome';
+  src: url("font/font-awesome.eot");
+  src: url("font/font-awesome.eot?#iefix") format('embedded-opentype'), url("font/font-awesome.woff") format('woff'), url("font/font-awesome.ttf") format('truetype'), url("font/font-awesome.svg#font-awesome") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family: 'font-awesome';
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: 0.2em;
+  text-align: center;
+  opacity: 0.8;
+/* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+/* Animation center compensation - magrins should be symmetric */
+/* remove if not needed */
+  margin-left: 0.2em;
+/* you can be more comfortable with increased icons size */
+/* font-size: 120%; */
+/* Uncomment for 3D effect */
+/* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-pause:before { content: '\2389'; } /* '?' */
+.icon-caret-up:before { content: '\25b4'; } /* '?' */
+.icon-play:before { content: '\25b6'; } /* '?' */
+.icon-caret-down:before { content: '\25be'; } /* '?' */
+.icon-envelope:before { content: '\2709'; } /* '?' */
+.icon-remove-sign:before { content: '\2716'; } /* '?' */
+.icon-info-sign:before { content: '\e705'; } /* '?' */
+.icon-tag:before { content: '\e70c'; } /* '?' */
+.icon-tags:before { content: '\e70d'; } /* '?' */
+.icon-chevron-left:before { content: '\e75d'; } /* '?' */
+.icon-chevron-right:before { content: '\e75e'; } /* '?' */
+.icon-circle-left:before { content: '\f0a8'; } /* '?' */
+.icon-circle-right:before { content: '\f0a9'; } /* '?' */
+.icon-camera:before { content: '?'; } /* '\1f4f7' */
+.icon-search:before { content: '?'; } /* '\1f50d' */
+
 /* PICBOX */
 #pbOverlay.show{ opacity:1; pointer-events:auto; }
 #pbOverlay{
@@ -134,50 +182,3 @@
 #pbOverlay.show #pbPrevBtn{ left:0; text-align:left; }
 #pbOverlay.show #pbNextBtn{ right:0; text-align:right; }
 
-@charset "UTF-8";
-
-@font-face {
-  font-family: 'font-awesome';
-  src: url("font/font-awesome.eot");
-  src: url("font/font-awesome.eot?#iefix") format('embedded-opentype'), url("font/font-awesome.woff") format('woff'), url("font/font-awesome.ttf") format('truetype'), url("font/font-awesome.svg#font-awesome") format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-  font-family: 'font-awesome';
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: 0.2em;
-  text-align: center;
-  opacity: 0.8;
-/* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
-/* Animation center compensation - magrins should be symmetric */
-/* remove if not needed */
-  margin-left: 0.2em;
-/* you can be more comfortable with increased icons size */
-/* font-size: 120%; */
-/* Uncomment for 3D effect */
-/* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-}
-
-.icon-pause:before { content: '\2389'; } /* '⎉' */
-.icon-up-dir:before { content: '\25b4'; } /* '▴' */
-.icon-play:before { content: '\25b6'; } /* '▶' */
-.icon-down-dir:before { content: '\25be'; } /* '▾' */
-.icon-mail:before { content: '\2709'; } /* '✉' */
-.icon-cancel-circle:before { content: '\2716'; } /* '✖' */
-.icon-info-circle:before { content: '\e705'; } /* '' */
-.icon-tag:before { content: '\e70c'; } /* '' */
-.icon-tags:before { content: '\e70d'; } /* '' */
-.icon-left-open:before { content: '\e75d'; } /* '' */
-.icon-right-open:before { content: '\e75e'; } /* '' */
-.icon-left-circled:before { content: '\f0a8'; } /* '' */
-.icon-right-circled:before { content: '\f0a9'; } /* '' */
-.icon-camera:before { content: '📷'; } /* '\1f4f7' */
-.icon-search:before { content: '🔍'; } /* '\1f50d' */
