--- a/photobox/photobox.css
+++ b/photobox/photobox.css
@@ -8,7 +8,20 @@
   font-style: normal;
 }
 
+
 /* Font-Awesome Fix if Bootstrap CSS is used to overide icon glyphs */
+[class^="icon-"], [class*=" icon-"] {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    line-height: 14px;
+    vertical-align: text-top;
+    background-image: none !important;
+     background-position: 0% 0%;
+  background-repeat: repeat;
+    margin-top: 0;
+}
+
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
   font-family: 'font-awesome';
