--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
-html{ min-height:100%; overflow-y:scroll; box-shadow:0 0 0 10px rgba(255,255,255,0.1) inset; }
-body{ height:100%; background:url('bg2.jpg') 50% 50% fixed no-repeat; background-size:cover; -webkit-background-size:100% 100%; -webkit-animation:8s bg forwards ease; }
+/* YUI 3.8.1 (build 5795) Copyright 2013 Yahoo! Inc. */
+html{color:#000;background:#FFF}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0}table{border-collapse:collapse;border-spacing:0}fieldset,img{border:0}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal}ol,ul{list-style:none}caption,th{text-align:left}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}q:before,q:after{content:''}abbr,acronym{border:0;font-variant:normal}sup{vertical-align:text-top}sub{vertical-align:text-bottom}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit}input,textarea,select{*font-size:100%}legend{color:#000}#yui3-css-stamp.cssreset{display:none}
+
+html{ height:100%; overflow-y:scroll; }
+body{ font-family:"Helvetica Neue",Helvetica,Arial,sans-serif; box-shadow:0 0 0 10px rgba(255,255,255,0.1) inset; min-height:100%; padding:0; background:url('bg2.jpg') 50% 50% fixed no-repeat; background-size:cover; -webkit-background-size:100% 100%; -webkit-animation:8s bg forwards ease; }
 
 @-webkit-keyframes bg{ 
 	0%{ background-size:120% 120%; }
@@ -7,41 +10,50 @@ body{ height:100%; background:url('bg2.jpg') 50% 50% fixed no-repeat; background
 }
 
 @font-face {
-  font-family: 'Romanesco';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Romanesco'), local('Romanesco-Regular'), url(http://themes.googleusercontent.com/static/fonts/romanesco/v1/ulV2bu0ivcWDuAzM7oh4XT8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
+	font-family:'Romanesco';
+	font-style:normal;
+	font-weight:400;
+	src:local('Romanesco'), local('Romanesco-Regular'), url(http://themes.googleusercontent.com/static/fonts/romanesco/v1/ulV2bu0ivcWDuAzM7oh4XT8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
 }
 
 @font-face {
-  font-family: 'Cuprum';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Cuprum'), local('Cuprum-Regular'), url(http://themes.googleusercontent.com/static/fonts/cuprum/v4/sp1_LTSOMWWV0K5VTuZzvQ.woff) format('woff');
+	font-family:'Cuprum';
+	font-style:normal;
+	font-weight:400;
+	src:local('Cuprum'), local('Cuprum-Regular'), url(http://themes.googleusercontent.com/static/fonts/cuprum/v4/sp1_LTSOMWWV0K5VTuZzvQ.woff) format('woff');
 }
+
+a{ text-decoration:none; }
+.btn{ display:inline-block; box-shadow:0 0 3px 2px rgba(0, 0, 0, 0.3), 0 -30px 30px -15px #00329B inset, 0 1px 0 rgba(255,255,255,0.3) inset; background:#0088CC; background-repeat:repeat-x; color:#FFF; text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25); border-radius:6px; padding:14px 24px; -webkit-transition:0.15s; transition:0.15s; }
+.btn:hover{ background:#0068BA; }
+.btn:active{ box-shadow:0 0 0 0 rgba(0, 0, 0, 0.3), 0 -30px 30px -15px #00329B inset, 0 0 6px #00243F inset; }
 
 #wrap{ overflow:hidden; padding:3%; }
 #pbOverlay.show ~ #wrap{ -webkit-filter:blur(2px) grayscale(.4);}
 .main{ float:left; font-size:1.1em; width:36%; color:#FFF; text-shadow:2px 2px 4px rgba(0,0,0,.5); font-family:'Cuprum'; }
-	.main h1{ line-height:1; font-size:6.2em; margin:0; text-indent:1%; font-family:'Romanesco'; }
+	.main h1{ line-height:0.75; font-size:6.2em; margin:0; text-indent:1%; font-family:'Romanesco'; }
 		.main small{ color:inherit; }
-	.main h2{ font-size:1.7em; color:#FF1668; line-height:0.5; margin:0; font-family:'Romanesco'; }
+	.main h2{ font-size:1.7em; color:#FF1668; line-height:1.2; margin:0; font-family:'Romanesco'; }
 	.main p{ margin:7% 0; }
-	.main .btn{ box-shadow:0 0 4px rgba(0,0,0,0.4); }
 		.main footer{ margin-top:50px; text-shadow:none; font-size:0.9em; }
-		.main footer a{ color:#D8FF16; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
+		.main footer .copy{ font-family:Tahoma; font-size:1.2em; font-weight:bold; margin:0 3px; opacity:0.35; }
+		.main footer a{ margin-left:10px; color:#D8FF16; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
 		.main footer a:hover{ text-decoration:none; color:#FF1668; }
+
 #gallery{ float:right; width:60%; }
-	#gallery li{ list-style:none; perspective:100px; -webkit-perspective:100px; margin:1px; float:left; position:relative; transition:.1s; -webkit-transition:0.1s; }
-	#gallery a{ display:block; width:75px; height:68px; vertical-align:bottom; overflow:hidden; background:rgba(0,0,0,0.1);
-				transition:.4s ease-out; -webkit-transition:0.4s ease-out; -webkit-transform:rotateX(90deg) translateY(-50%); transform:rotateX(90deg) translateY(-50%); }
-	#gallery a img{ min-height:100%; min-width:100%; transition:.3s ease-out; -webkit-transition:0.3s ease-out; }
-	#gallery .loaded a{ -webkit-transform:rotateX(0deg) translateY(0); transform:rotateX(0deg) translateY(0); }
-		#gallery li.loaded:hover{ transform:scale(1.5); -webkit-transform:scale(1.5); z-index:2; }
-		#gallery li.loaded a:hover{ box-shadow:0 0 0 2px #FFF, 0 0 20px 5px #000; transition:.1s; -webkit-transition:0.1s; }
-		#gallery li.loaded:hover img{ transform:scale(1.2); -webkit-transform:scale(1.2); }
+	#gallery li{ list-style:none; perspective:100px; -webkit-perspective:100px; margin:1px; float:right; position:relative; transition:.1s; -webkit-transition:0.1s; }
+		#gallery a{ display:block; width:75px; height:68px; vertical-align:bottom; overflow:hidden; background:rgba(0,0,0,0.1);
+					transition:.4s ease-out; -webkit-transition:0.4s ease-out; -webkit-transform:rotateX(90deg) translateY(-50%); transform:rotateX(90deg) translateY(-50%); }
+		#gallery a img{ min-height:100%; min-width:100%; transition:.3s ease-out; -webkit-transition:0.3s ease-out; }
+		#gallery .loaded a{ -webkit-transform:rotateX(0deg) translateY(0); transform:rotateX(0deg) translateY(0); }
+			#gallery li.loaded:hover{ transform:scale(1.5); -webkit-transform:scale(1.5); z-index:2; }
+			#gallery li.loaded a:hover{ box-shadow:0 0 0 2px #FFF, 0 0 20px 5px #000; transition:.1s; -webkit-transition:0.1s; }
+			#gallery li.loaded:hover img{ transform:scale(1.2); -webkit-transform:scale(1.2); }
 	
 /*------- media queries -----------*/
 @media all and (max-width:700px){
-	#gallery > a{ width:45px; height:45px; }
+	.main h1{ font-size:5.2em; }
+	.main h2{ font-size:1.5em; }
+	#gallery li{ margin:0; }
+	#gallery a{ width:50px; height:45px; }
 } 
