--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ a{ text-decoration:none; }
 	.main h1{ line-height:0.75; font-size:6.2em; margin:0; text-indent:1%; font-family:'Romanesco'; }
 		.main small{ color:inherit; }
 	.main h2{ font-size:1.7em; color:#FF1668; line-height:1.2; margin:0; font-family:'Romanesco'; }
-	.main p{ margin:7% 0; }
+	.main p{ margin:15px 0; }
 		.main footer{ margin-top:50px; text-shadow:none; font-size:0.9em; }
 		.main footer .copy{ font-family:Tahoma; font-size:1.2em; font-weight:bold; margin:0 3px; opacity:0.35; }
 		.main footer a{ margin-left:10px; color:#D8FF16; -webkit-transition:0.2s; -ms-transition:0.2s; transition:0.2s; }
@@ -44,6 +44,7 @@ a{ text-decoration:none; }
 	#gallery li{ list-style:none; perspective:100px; -webkit-perspective:100px; margin:1px; float:right; position:relative; transition:.1s; -webkit-transition:0.1s; }
 		#gallery a{ display:block; width:75px; height:68px; vertical-align:bottom; overflow:hidden; background:rgba(0,0,0,0.1);
 					transition:.4s ease-out; -webkit-transition:0.4s ease-out; -webkit-transform:rotateX(90deg) translateY(-50%); transform:rotateX(90deg) translateY(-50%); }
+		#gallery a:active, #gallery a:focus{ outline:none; }
 		#gallery a img{ min-height:100%; min-width:100%; transition:.3s ease-out; -webkit-transition:0.3s ease-out; }
 		#gallery .loaded a{ -webkit-transform:rotateX(0deg) translateY(0); transform:rotateX(0deg) translateY(0); }
 			#gallery li.loaded:hover{ transform:scale(1.5); -webkit-transform:scale(1.5); z-index:2; }
@@ -52,8 +53,13 @@ a{ text-decoration:none; }
 	
 /*------- media queries -----------*/
 @media all and (max-width:700px){
+	body{ background-position:0 0; background-attachment:inherit; box-shadow:none; }
+	.main, #gallery{ float:none; width:auto; font-size:0.9em; }
 	.main h1{ font-size:5.2em; }
 	.main h2{ font-size:1.5em; }
+	.btn{ position:absolute; right:10px; top:26px; }
 	#gallery li{ margin:0; }
-	#gallery a{ width:50px; height:45px; }
+	#gallery a{ width:55px; height:50px; }
+	#gallery li.loaded:hover img, #gallery li.loaded:hover{ transform:none; -webkit-transform:none; }
+	.main footer{ margin:10px 0; }
 } 
